# jugmt

./: .gitignore  Makefile  README.rst  pyproject.toml
.github/workflows/: bd.yaml  pages.yml
docs/: Makefile  conf.py  pyproject.toml
docs/src/: index.rst  sloc.cmd  sloc.out
docs/src/api/: jugmt.cli.rst  jugmt.document.rst  jugmt.rst  jugmt.schema.checker.rst  jugmt.schema.rst  jugmt.templates.rst
docs/src/install/: index.rst
docs/src/schema/: index.rst
docs/src/usage/: index.rst  usage.cmd  usage.out
example/output/: figure_example.figures.json  figure_example.json
src/jugmt/: cli.py  document.py
src/jugmt/schema/: __init__.py  checker.py  document.figures.schema.json  figures.schema.json  stage1.schema.json
src/jugmt/templates/: document.figures.html.jinja2  document.html.jinja2
tests/: test_case_conversion.py  test_cli.py  test_module.py  test_schema.py  test_sloc.py  test_weight.py
toolbox/: project_version_update.py
