[project]
name = "jugmt"
version = "0.4.2"
description = "JUst Give Me Tables"
authors = [
    { name = "Simon A. F. Lund", email = "os@safl.dk" }
]
license = { text = "LGPL-2.1-only" }
dependencies = [
    "dataclasses-jsonschema",
    "jinja2",
    "jsonschema",
    "pytest",
    "pytest-cov",
    "python-docx",
]
readme = { file = "README.rst", content-type = "text/x-rst" }

[project.scripts]
jugmt = "jugmt.cli:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.jinja2", "*.schema.json"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--maxfail=1 --disable-warnings"
testpaths = [
    "tests",
]
