[tool.poetry]
name = "autogen"
version = "0.7.5"
description = ""
authors = ["Simon A. F. Lund <os@safl.dk>"]

[tool.poetry.dependencies]
dataclasses_jsonschema = "2.16.0"
furo = "2024.5.6"
kmdo = "1.0.6"
python = "^3.9"
sphinx = "7.3.7"
sphinx_autodoc_typehints = "2.2.2"
sphinx-copybutton = "0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
